--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="css/stylesheet.css">
 
-    <title>Slate : A responsive theme for GitHub Pages</title>
+    <title>还原真相： 揭露无锡汽修不平等竞争</title>
   </head>
 
   <body>
@@ -16,10 +16,10 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="repository_url}}">View on GitHub</a>
+          <a id="forkme_banner" href="repository_url}}">无锡汽修不平等竞争</a>
 
-          <h1 id="project_title">Slate</h1>
-          <h2 id="project_tagline">A responsive theme for GitHub Pages</h2>
+          <h1 id="project_title">揭露无锡汽修不平等竞争</h1>
+          <h2 id="project_tagline">揭露无锡汽修不平等竞争</h2>
 
           <section id="downloads">
             <a class="zip_download_link" href="#">Download this project as a .zip file</a>
