add more content

--- a/index.html
+++ b/index.html
@@ -19,12 +19,6 @@
           <a id="forkme_banner" href="repository_url}}">无锡汽修不平等竞争</a>
 
           <h1 id="project_title">揭露无锡汽修不平等竞争</h1>
-          <h2 id="project_tagline">揭露无锡汽修不平等竞争</h2>
-
-          <section id="downloads">
-            <a class="zip_download_link" href="#">Download this project as a .zip file</a>
-            <a class="tar_download_link" href="#">Download this project as a tar.gz file</a>
-          </section>
         </header>
     </div>
 
@@ -41,63 +35,110 @@
           反正只要过了就行了。过了半个小时，两个标贴到手，给钱果然好办事。
         </p>
 
-<pre>
-def robot_invasion
-puts("robot " * 1000)
-end
-</pre>
+        <h1> 详细情况如下 </h1>
+        <pre><li> 高浪路西向东与南湖大道红绿灯 </li></pre>
+        <img src="img/1.png" alt="高浪路西向东与南湖大道红绿灯" height="400" width="400">
 
-<p>How about we throw some angle braces and ampersands in there?</p>
+        <pre><li> 高浪路东向西与南湖大道红绿灯 </li></pre>
+        <img src="img/2.png" alt="高浪路东向西与南湖大道红绿灯" height="400" width="400">
 
-<pre><code>
-&lt;div class="footer"&gt;
-&amp;copy; 2013 Zorg Industries
-&lt;/div&gt;
-</code></pre>
+        <pre><li> 贡湖大道北往南过高架 </li></pre>
+        <img src="img/3.png" alt="贡湖大道北往南过高架" height="400" width="400">
 
-        <h3>If you need to blame someone, the best way to do so is by quoting them:</h3>
+        <pre><li> 贡湖大道南向北金石路红绿灯 </li></pre>
+        <img src="img/4.png" alt="贡湖大道南向北金石路红绿灯" height="400" width="400">
+
+        <pre><li> 金石路西向东与南湖大道红绿灯 </li></pre>
+        <img src="img/5.png" alt="金石路西向东与南湖大道红绿灯" height="400" width="400">
+
+        <pre><li> 金石路西向东与贡湖大道红绿灯 </li></pre>
+        <img src="img/6.png" alt="金石路西向东与贡湖大道红绿灯" height="400" width="400">
+
+        <pre><li> 南湖大道南向北与梁东路 </li></pre>
+        <img src="img/7.png" alt="南湖大道南向北与梁东路" height="400" width="400">
+
+        <pre><li> 南湖大道北向南过梁东路 </li></pre>
+        <img src="img/8.png" alt="南湖大道北向南过梁东路" height="400" width="400">
+
+        <pre><li> 金城桥东向西下高架匝道 </li></pre>
+        <img src="img/9.png" alt="金城桥东向西下高架匝道" height="400" width="400">
+
+        <pre><li> 金城高架东向西转贡湖大道下匝道 </li></pre>
+        <img src="img/10.png" alt="金城高架东向西转贡湖大道下匝道" height="400" width="400">
+
+        <pre><li> 金城高架下西向东转南湖大道 </li></pre>
+        <img src="img/11.png" alt="金城高架下西向东转南湖大道" height="400" width="400">
+
+        <pre><li> 南湖大道北向南与金石路红绿灯 </li></pre>
+        <img src="img/11.png" alt="金城高架下西向东转南湖大道" height="400" width="400">
+
+        <h3>下面是地图总览</h3>
 
         <blockquote>
-        <p>I, at any rate, am convinced that He does not throw dice.</p>
+        <p>这种恶性竞争已经到了超狂的地步，我们已经联系了媒体来曝光此事</p>
         </blockquote>
 
-        <p>Or perhaps someone a little less eloquent:</p>
+        <img src="img/overview.png" alt="总览" height="400" width="400">
 
         <blockquote>
-        <p>I wish you'd have given me this written question ahead of time so I
-        could plan for it... I'm sure something will pop into my head here in
-        the midst of this press conference, with all the pressure of trying to
-        come up with answer, but it hadn't yet...</p>
-
-        <p>I don't want to sound like
-        I have made no mistakes. I'm confident I have. I just haven't - you
-        just put me under the spot here, and maybe I'm not as quick on my feet
-        as I should be in coming up with one.</p>
+        <p>这种恶性竞争造成的最大危害还不仅是阻碍了民营资本进入演出市场，更严重的是使整个行业利薄如纸。</p>
         </blockquote>
 
-        <h2>An octocat appears!</h2>
-        <img alt="an octocat!" src="http://octodex.github.com/images/octocat-de-los-muertos.jpg" />
-        <p>My favorite octocat, illustrated by <a href="https://github.com/cameronmcefee">@cameronmceffee</a>.</p>
-
-        <h2>Table for two</h2>
+        <h2>联系的媒体</h2>
 
         <table>
         <tr>
           <th>ID</th>
-          <th>Name</th>
-          <th>Rank</th>
+          <th>媒体</th>
+          <th>联系状态</th>
         </tr>
         <tr>
           <td>1</td>
-          <td>Tom Preston-Werner</td>
-          <td>Awesome</td>
+          <td>@无锡发布</td>
+          <td>✓</td>
         </tr>
         <tr>
           <td>2</td>
-          <td>Albert Einstein</td>
-          <td>Nearly as awesome</td>
+          <td>@无锡交警</td>
+          <td>✓</td>
+        </tr>
+        <tr>
+          <td>3</td>
+          <td>@平安无锡</td>
+          <td>✓</td>
+        </tr>
+        <tr>
+          <td>4</td>
+          <td>@无锡车管</td>
+          <td>✓</td>
+        </tr>
+        <tr>
+          <td>5</td>
+          <td>@无锡环保</td>
+          <td>✓</td>
+        </tr>
+        <tr>
+          <td>6</td>
+          <td>@无锡交通广播</td>
+          <td>✓</td>
+        </tr>
+        <tr>
+          <td>6</td>
+          <td>@无锡新闻广播</td>
+          <td>✓</td>
+        </tr>
+        <tr>
+          <td>7</td>
+          <td>@头条无锡</td>
+          <td>✓</td>
         </tr>
         </table>
+
+        <h2>宣言</h2>
+
+        <blockquote>
+        <p>我们媒体记者会跟踪报道，和行业不正当竞争斗争到底！</p>
+        </blockquote>
 
       </section>
     </div>
@@ -105,8 +146,8 @@ end
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Slate theme maintained by <a href="https://github.com/jasoncostello">Jason Costello</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+        <p class="copyright">本站由无锡自由之翼维护</a></p>
+        <p>通过 <a href="http://pages.github.com">Github Pages</a></p>
       </footer>
     </div>
 
